2011-08-08  Nick Alcock  <nick.alcock@oracle.com>

	* runtest.sh: Drop userspace test coverage info into the coverage/
	subdirectory of the test logdir.

	* README.build-system (name_NOCFLAGS): New, filter out unwanted
	CFLAGS from a target.
	* Makefunctions (cc-dependencies): Implement it.
	* test/triggers/Build (TRIGGERS): Use it to filter out test coverage
	info from triggers.

2011-08-02  Nick Alcock  <nick.alcock@oracle.com>

	test/triggers/testprobe.c: New test script to fire the dt_test
	dtrace test provider's test probe.
	test/triggers/Build: Link it.
	test/dt_test/fired.d: Use it.
	test/dt_test/fired.r: Expected results.

	test/struct/kstat.d: No longer use runtest-opts-override, as it no
	longer exists.

	runtest.sh: .x files return nonzero if failure is expected, not
	zero.

2011-08-02  Nick Alcock  <nick.alcock@oracle.com>

	runtest.sh: Support triggers (in @@trigger options and .t files)
	and a new --execute option.  Postprocess CPU and probe IDs out of
	expected results.  Fix use of call_with_timeout (now named
	run_with_timeout) in cheap subshells (not requiring shell
	reinitialization).  Don't leak monitor state out of
	call_with_timeout.  Fix PASS/FAIL appearance bugs.

	test/triggers/Build: New file, build all named TRIGGERS,
	symlink them into test/triggers for the testsuite, and
	clean them up on 'make clean'.

	test/Build: New file, simply run test/triggers/Build.

2011-08-02  Nick Alcock  <nick.alcock@oracle.com>

	Makerules: No longer fail if CMDS contains more than one word.

	Makefunctions: Support post-linkage actions.
	README.build-system: Document them.

2011-08-02  Nick Alcock  <nick.alcock@oracle.com>

	More testsuite changes.

	runtest.sh: Support test logging, test timeouts, automatic diffs,
	expected-results postprocessing and capturing, D script
	preprocessing, and programmable expected-failure support. Refactor
	to reduce code repetition.
	GNUmakefile: Clean up test/log too.

2011-07-28  Shujing Zhao  <pearly.zhao@oracle.com>
